<resources>
    <string name="app_name">K-VPN</string>
    <string name="vpn_on">VPN ON</string>
    <string name="vpn_off">VPN OFF</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_close_confirm">Would you like to cancel the current VPN Connection?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="upload_speed">Upload Speed:</string>
    <string name="download_speed">Download Speed:</string>
    <string name="packet_received">Packet Received:</string>
    <string name="duration_00_00_00">Duration: 00:00:00</string>
    <string name="connection_status">Connection Status</string>
    <string name="vpn_select">VPN Select</string>
</resources>
